check_PROGRAMS = node_sim_portable node_sim_portable1 node_sim_portable2 node_sim_portable3 node_sim_portable4 node_sim_portable5 node_sim_sleepy

node_sim_portable_SOURCES = node_sim_portable.c ../common/common_handlers.c ../common/test_step.c ../common/mesh_event_handler.c
node_sim_portable_LDADD = ../../../src/libmeshlink.la
node_sim_portable_CFLAGS = -D_GNU_SOURCE

node_sim_portable1_SOURCES = node_sim_portable1.c ../common/common_handlers.c ../common/test_step.c ../common/mesh_event_handler.c
node_sim_portable1_LDADD = ../../../src/libmeshlink.la
node_sim_portable1_CFLAGS = -D_GNU_SOURCE

node_sim_portable2_SOURCES = node_sim_portable2.c ../common/common_handlers.c ../common/test_step.c ../common/mesh_event_handler.c
node_sim_portable2_LDADD = ../../../src/libmeshlink.la
node_sim_portable2_CFLAGS = -D_GNU_SOURCE

node_sim_portable3_SOURCES = node_sim_portable3.c ../common/common_handlers.c ../common/test_step.c ../common/mesh_event_handler.c
node_sim_portable3_LDADD = ../../../src/libmeshlink.la
node_sim_portable3_CFLAGS = -D_GNU_SOURCE

node_sim_portable4_SOURCES = node_sim_portable4.c ../common/common_handlers.c ../common/test_step.c ../common/mesh_event_handler.c
node_sim_portable4_LDADD = ../../../src/libmeshlink.la
node_sim_portable4_CFLAGS = -D_GNU_SOURCE

node_sim_portable5_SOURCES = node_sim_portable5.c ../common/common_handlers.c ../common/test_step.c ../common/mesh_event_handler.c
node_sim_portable5_LDADD = ../../../src/libmeshlink.la
node_sim_portable5_CFLAGS = -D_GNU_SOURCE

node_sim_sleepy_SOURCES = node_sim_sleepy.c ../common/common_handlers.c ../common/test_step.c ../common/mesh_event_handler.c
node_sim_sleepy_LDADD = ../../../src/libmeshlink.la
node_sim_sleepy_CFLAGS = -D_GNU_SOURCE
